--- a/src/assets/styles/sections/works.scss
+++ b/src/assets/styles/sections/works.scss
@@ -35,7 +35,7 @@
 .works__image-container {
   flex-basis: 45%;
   margin-left: auto;
-  background-image: url("/assets/images/work-1.png");
+  background-image: url("./assets/images/work-1.png");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: contain;
