--- a/src/views/pages/blog.pug
+++ b/src/views/pages/blog.pug
@@ -15,25 +15,25 @@ block content
             .socials
               a.socials__social-btn.socials__social-btn--vk.socials__social-btn--vk-small(href="https://vk.com/timur.yumadilov")
                 svg
-                  use(xlink:href='/assets/images/icons/sprite.svg#vk')
+                  use(xlink:href='./assets/images/icons/sprite.svg#vk')
               a.socials__social-btn.socials__social-btn--github.socials__social-btn--github-small(href="https://github.com/yumadilovtimur")
                 svg
-                  use(xlink:href='/assets/images/icons/sprite.svg#github')
+                  use(xlink:href='./assets/images/icons/sprite.svg#github')
               a.socials__social-btn.socials__social-btn--in.socials__social-btn--in-small(href="https://ru.linkedin.com/")
                 svg
-                  use(xlink:href='/assets/images/icons/sprite.svg#in')
+                  use(xlink:href='./assets/images/icons/sprite.svg#in')
             button.header__menu-btn
               .header__menu-btn-element
               .header__menu-btn-element
               .header__menu-btn-element
           .header__content
-            img.header__avatar(src="/assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
+            img.header__avatar(src="./assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
             h1.header__title Блог
             span.header__text Статьи, которые я написал
           .header__arrow-down
             a.header__arrow-down-link(href="#")
               svg
-                use(xlink:href='/assets/images/icons/sprite.svg#arrow_down')
+                use(xlink:href='./assets/images/icons/sprite.svg#arrow_down')
       .triangles
             svg.traingle(xmlns='http://www.w3.org/2000/svg', viewBox='0 0 1000 85', preserveAspectRatio='none')
               polygon.left(points='0,0   0,86   500.8,86   500.8,75.5')
@@ -104,13 +104,13 @@ block content
                 .socials.socials--left-position
                   a.socials__social-btn.socials__social-btn--vk.socials__social-btn--left-padding-none.socials__social-btn--gray-fill(href="https://vk.com/timur.yumadilov")
                     svg
-                      use(xlink:href='/assets/images/icons/sprite.svg#vk')
+                      use(xlink:href='./assets/images/icons/sprite.svg#vk')
                   a.socials__social-btn.socials__social-btn--github.socials__social-btn--gray-fill(href="https://github.com/yumadilovtimur")
                     svg
-                      use(xlink:href='/assets/images/icons/sprite.svg#github')
+                      use(xlink:href='./assets/images/icons/sprite.svg#github')
                   a.socials__social-btn.socials__social-btn--in.socials__social-btn--gray-fill(href="https://ru.linkedin.com/")
                     svg
-                      use(xlink:href='/assets/images/icons/sprite.svg#in')
+                      use(xlink:href='./assets/images/icons/sprite.svg#in')
               .footer__contacts
                 a.footer__email(href='mailto:t.yumadilov@mail.ru') t.yumadilov@mail.ru
                 a.footer__phone(href='tel:+7-996-401-50-02') +7-996-401-50-02
