--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -9,9 +9,9 @@ block scripts
 block content
   .wrapper.wrapper--bg-intro
     .wrapper__video-bg
-      video.wrapper__html-video(width="100%", height="auto", preload="auto" loop="loop", muted="muted", autoplay="autoplay", poster="/assets/images/intro-bg.jpg")
-        source(src="/assets/images/night.mp4", type="video/mp4")
-        source(src="/assets/images/night.webm", type="video/webm")
+      video.wrapper__html-video(width="100%", height="auto", preload="auto" loop="loop", muted="muted", autoplay="autoplay", poster="./assets/images/intro-bg.jpg")
+        source(src="./assets/images/night.mp4", type="video/mp4")
+        source(src="./assets/images/night.webm", type="video/webm")
     .container
       .intro
         header.intro__header
@@ -19,20 +19,20 @@ block content
         
         article.about
           .about__content
-            img.about__avatar(src="/assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
+            img.about__avatar(src="./assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
             h1.about__title Юмадилов Тимур
             h2.about__subtitle Личный сайт веб-разработчика
           
           .socials
             a.socials__social-btn.socials__social-btn--vk(href="https://vk.com/timur.yumadilov")
               svg
-                use(xlink:href='/assets/images/icons/sprite.svg#vk')
+                use(xlink:href='./assets/images/icons/sprite.svg#vk')
             a.socials__social-btn.socials__social-btn--github(href="https://github.com/yumadilovtimur")
               svg
-                use(xlink:href='/assets/images/icons/sprite.svg#github')
+                use(xlink:href='./assets/images/icons/sprite.svg#github')
             a.socials__social-btn.socials__social-btn--in(href="https://ru.linkedin.com/")
               svg
-                use(xlink:href='/assets/images/icons/sprite.svg#in')
+                use(xlink:href='./assets/images/icons/sprite.svg#in')
 
           .about__buttons
             ul.about__list-buttons
