--- a/src/assets/styles/sections/intro.scss
+++ b/src/assets/styles/sections/intro.scss
@@ -2,7 +2,7 @@
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 100%;
-  background-image: url("/assets/images/intro-bg.png");
+  background-image: url("./assets/images/intro-bg.png");
   position: relative;
   width: 100%;
   height: 100%;
