--- a/src/assets/styles/sections/resume.scss
+++ b/src/assets/styles/sections/resume.scss
@@ -53,7 +53,7 @@
   width: 100%;
   min-height: 100px;
   background-size: contain;
-  background-image: url("/assets/images/resume-title-bg.png");
+  background-image: url("./assets/images/resume-title-bg.png");
   flex-basis: 47%;
   margin-right: 20px;
   @include desktop {
