--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -19,25 +19,25 @@ block content
             .socials
               a.socials__social-btn.socials__social-btn--vk.socials__social-btn--vk-small(href="https://vk.com/timur.yumadilov")
                 svg
-                  use(xlink:href='/assets/images/icons/sprite.svg#vk')
+                  use(xlink:href='./assets/images/icons/sprite.svg#vk')
               a.socials__social-btn.socials__social-btn--github.socials__social-btn--github-small(href="https://github.com/yumadilovtimur")
                 svg
-                  use(xlink:href='/assets/images/icons/sprite.svg#github')
+                  use(xlink:href='./assets/images/icons/sprite.svg#github')
               a.socials__social-btn.socials__social-btn--in.socials__social-btn--in-small(href="https://ru.linkedin.com/")
                 svg
-                  use(xlink:href='/assets/images/icons/sprite.svg#in')
+                  use(xlink:href='./assets/images/icons/sprite.svg#in')
             button.header__menu-btn
               .header__menu-btn-element
               .header__menu-btn-element
               .header__menu-btn-element
           .header__content.header__content--for-page-about
-            img.header__avatar(src="/assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
+            img.header__avatar(src="./assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
             h1.header__title.header__title--small Юмадилов Тимур
             span.header__text Личный сайт веб разработчика
           .header__arrow-down.header__arrow-down--for-about-page
             a.header__arrow-down-link(href="#")
               svg
-                use(xlink:href='/assets/images/icons/sprite.svg#arrow_down')
+                use(xlink:href='./assets/images/icons/sprite.svg#arrow_down')
       .triangles.triangles--for-about-page
             svg.traingle(xmlns='http://www.w3.org/2000/svg', viewBox='0 0 1000 85', preserveAspectRatio='none')
               polygon.left(points='0,0   0,86   500.8,86   500.8,75.5')
@@ -49,7 +49,7 @@ block content
           .resume__about
             h2.resume__about-title Обо мне
             article.resume__content
-              img.resume__avatar(src="/assets/images/avatar.jpg", alt="")
+              img.resume__avatar(src="./assets/images/avatar.jpg", alt="")
               span.resume__content-title Кто я
               p.resume__text Я веб разработчик из Уфы. Мне 21 год. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
               p.resume__text Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
@@ -130,19 +130,19 @@ block content
         ul.about-contacts__list
           li.about-contacts__item
             svg.about-contacts__icon
-              use(xlink:href='/assets/images/icons/sprite.svg#envelope_n')
+              use(xlink:href='./assets/images/icons/sprite.svg#envelope_n')
             span.about-contacts__item-text timur.yumadilov
           li.about-contacts__item
             svg.about-contacts__icon
-              use(xlink:href='/assets/images/icons/sprite.svg#envelope_n')
+              use(xlink:href='./assets/images/icons/sprite.svg#envelope_n')
             span.about-contacts__item-text t.yumadilov@mail.ru
           li.about-contacts__item
             svg.about-contacts__icon
-              use(xlink:href='/assets/images/icons/sprite.svg#phone_n')
+              use(xlink:href='./assets/images/icons/sprite.svg#phone_n')
             span.about-contacts__item-text +7-996-401-50-02
           li.about-contacts__item
             svg.about-contacts__icon
-              use(xlink:href='/assets/images/icons/sprite.svg#map_n')
+              use(xlink:href='./assets/images/icons/sprite.svg#map_n')
             span.about-contacts__item-text г. Уфа, ул. Юрия Гагарина, д. 3
             
 
@@ -165,13 +165,13 @@ block content
                 .socials.socials--left-position
                   a.socials__social-btn.socials__social-btn--vk.socials__social-btn--left-padding-none.socials__social-btn--gray-fill(href="https://vk.com/timur.yumadilov")
                     svg
-                      use(xlink:href='/assets/images/icons/sprite.svg#vk')
+                      use(xlink:href='./assets/images/icons/sprite.svg#vk')
                   a.socials__social-btn.socials__social-btn--github.socials__social-btn--gray-fill(href="https://github.com/yumadilovtimur")
                     svg
-                      use(xlink:href='/assets/images/icons/sprite.svg#github')
+                      use(xlink:href='./assets/images/icons/sprite.svg#github')
                   a.socials__social-btn.socials__social-btn--in.socials__social-btn--gray-fill(href="https://ru.linkedin.com/")
                     svg
-                      use(xlink:href='/assets/images/icons/sprite.svg#in')
+                      use(xlink:href='./assets/images/icons/sprite.svg#in')
               .footer__contacts
                 a.footer__email(href='mailto:t.yumadilov@mail.ru') t.yumadilov@mail.ru
                 a.footer__phone(href='tel:+7-996-401-50-02') +7-996-401-50-02
