--- a/src/assets/styles/layout/fonts.scss
+++ b/src/assets/styles/layout/fonts.scss
@@ -1,44 +1,44 @@
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-Medium.eot');
-  src: url('/assets/fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-Medium.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-Medium.woff') format('woff'),
-      url('/assets/fonts/Roboto-Medium.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-Medium.svg#Roboto-Medium') format('svg');
+  src: url('./assets/fonts/Roboto-Medium.eot');
+  src: url('./assets/fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-Medium.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-Medium.woff') format('woff'),
+      url('./assets/fonts/Roboto-Medium.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-Medium.svg#Roboto-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-BoldItalic.eot');
-  src: url('/assets/fonts/Roboto-BoldItalic.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-BoldItalic.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-BoldItalic.woff') format('woff'),
-      url('/assets/fonts/Roboto-BoldItalic.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-BoldItalic.svg#Roboto-BoldItalic') format('svg');
+  src: url('./assets/fonts/Roboto-BoldItalic.eot');
+  src: url('./assets/fonts/Roboto-BoldItalic.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-BoldItalic.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-BoldItalic.woff') format('woff'),
+      url('./assets/fonts/Roboto-BoldItalic.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-BoldItalic.svg#Roboto-BoldItalic') format('svg');
   font-weight: bold;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Sansus Webissimo';
-  src: url('/assets/fonts/SansusWebissimo.eot');
-  src: url('/assets/fonts/SansusWebissimo.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/SansusWebissimo.woff2') format('woff2'),
-      url('/assets/fonts/SansusWebissimo.woff') format('woff'),
-      url('/assets/fonts/SansusWebissimo.ttf') format('truetype'),
-      url('/assets/fonts/SansusWebissimo.svg#SansusWebissimo') format('svg');
+  src: url('./assets/fonts/SansusWebissimo.eot');
+  src: url('./assets/fonts/SansusWebissimo.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/SansusWebissimo.woff2') format('woff2'),
+      url('./assets/fonts/SansusWebissimo.woff') format('woff'),
+      url('./assets/fonts/SansusWebissimo.ttf') format('truetype'),
+      url('./assets/fonts/SansusWebissimo.svg#SansusWebissimo') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-Light.eot');
-  src: url('/assets/fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-Light.woff2') format('woff2'),
+  src: url('./assets/fonts/Roboto-Light.eot');
+  src: url('./assets/fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-Light.woff2') format('woff2'),
       url('/assets/fonts/Roboto-Light.woff') format('woff'),
       url('/assets/fonts/Roboto-Light.ttf') format('truetype'),
       url('/assets/fonts/Roboto-Light.svg#Roboto-Light') format('svg');
@@ -48,84 +48,84 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-MediumItalic.eot');
-  src: url('/assets/fonts/Roboto-MediumItalic.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-MediumItalic.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-MediumItalic.woff') format('woff'),
-      url('/assets/fonts/Roboto-MediumItalic.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-MediumItalic.svg#Roboto-MediumItalic') format('svg');
+  src: url('./assets/fonts/Roboto-MediumItalic.eot');
+  src: url('./assets/fonts/Roboto-MediumItalic.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-MediumItalic.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-MediumItalic.woff') format('woff'),
+      url('./assets/fonts/Roboto-MediumItalic.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-MediumItalic.svg#Roboto-MediumItalic') format('svg');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-Regular.eot');
-  src: url('/assets/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-Regular.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-Regular.woff') format('woff'),
-      url('/assets/fonts/Roboto-Regular.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
+  src: url('./assets/fonts/Roboto-Regular.eot');
+  src: url('./assets/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-Regular.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-Regular.woff') format('woff'),
+      url('./assets/fonts/Roboto-Regular.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-Bold.eot');
-  src: url('/assets/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-Bold.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-Bold.woff') format('woff'),
-      url('/assets/fonts/Roboto-Bold.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-Bold.svg#Roboto-Bold') format('svg');
+  src: url('./assets/fonts/Roboto-Bold.eot');
+  src: url('./assets/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-Bold.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-Bold.woff') format('woff'),
+      url('./assets/fonts/Roboto-Bold.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-Bold.svg#Roboto-Bold') format('svg');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-Italic.eot');
-  src: url('/assets/fonts/Roboto-Italic.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-Italic.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-Italic.woff') format('woff'),
-      url('/assets/fonts/Roboto-Italic.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-Italic.svg#Roboto-Italic') format('svg');
+  src: url('./assets/fonts/Roboto-Italic.eot');
+  src: url('./assets/fonts/Roboto-Italic.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-Italic.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-Italic.woff') format('woff'),
+      url('./assets/fonts/Roboto-Italic.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-Italic.svg#Roboto-Italic') format('svg');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/assets/fonts/Roboto-LightItalic.eot');
-  src: url('/assets/fonts/Roboto-LightItalic.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/Roboto-LightItalic.woff2') format('woff2'),
-      url('/assets/fonts/Roboto-LightItalic.woff') format('woff'),
-      url('/assets/fonts/Roboto-LightItalic.ttf') format('truetype'),
-      url('/assets/fonts/Roboto-LightItalic.svg#Roboto-LightItalic') format('svg');
+  src: url('./assets/fonts/Roboto-LightItalic.eot');
+  src: url('./assets/fonts/Roboto-LightItalic.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/Roboto-LightItalic.woff2') format('woff2'),
+      url('./assets/fonts/Roboto-LightItalic.woff') format('woff'),
+      url('./assets/fonts/Roboto-LightItalic.ttf') format('truetype'),
+      url('./assets/fonts/Roboto-LightItalic.svg#Roboto-LightItalic') format('svg');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('/assets/fonts/FontAwesome.eot');
-  src: url('/assets/fonts/FontAwesome.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/FontAwesome.woff2') format('woff2'),
-      url('/assets/fonts/FontAwesome.woff') format('woff'),
-      url('/assets/fonts/FontAwesome.ttf') format('truetype'),
-      url('/assets/fonts/FontAwesome.svg#FontAwesome') format('svg');
+  src: url('./assets/fonts/FontAwesome.eot');
+  src: url('./assets/fonts/FontAwesome.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/FontAwesome.woff2') format('woff2'),
+      url('./assets/fonts/FontAwesome.woff') format('woff'),
+      url('./assets/fonts/FontAwesome.ttf') format('truetype'),
+      url('./assets/fonts/FontAwesome.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('/assets/fonts/FontAwesome_1.eot');
-  src: url('/assets/fonts/FontAwesome_1.eot?#iefix') format('embedded-opentype'),
-      url('/assets/fonts/FontAwesome_1.woff2') format('woff2'),
-      url('/assets/fonts/FontAwesome_1.woff') format('woff'),
-      url('/assets/fonts/FontAwesome_1.ttf') format('truetype'),
-      url('/assets/fonts/FontAwesome_1.svg#FontAwesome') format('svg');
+  src: url('./assets/fonts/FontAwesome_1.eot');
+  src: url('./assets/fonts/FontAwesome_1.eot?#iefix') format('embedded-opentype'),
+      url('./assets/fonts/FontAwesome_1.woff2') format('woff2'),
+      url('./assets/fonts/FontAwesome_1.woff') format('woff'),
+      url('./assets/fonts/FontAwesome_1.ttf') format('truetype'),
+      url('./assets/fonts/FontAwesome_1.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
