--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -12,6 +12,19 @@ block scriptsInHead
 
 block content
   .wrapper
+    .hambmenu
+      .container          
+        nav.hambmenu__nav
+          ul.hambmenu__list
+            li.hambmenu__list-item
+              a.hambmenu__link(href="works.html") Мои работы
+            li.hambmenu__list-item
+              a.hambmenu__link(href="blog.html") Блог
+            li.hambmenu__list-item
+              a.hambmenu__link(href="about.html") Обо мне
+            li.hambmenu__list-item
+              a.hambmenu__link(href="autorization.html") Авторизация
+              
     .header-bg
       .container
         .header
