--- a/src/views/pages/blog.pug
+++ b/src/views/pages/blog.pug
@@ -8,6 +8,19 @@ block scripts
 
 block content
   .wrapper
+    .hambmenu
+      .container          
+        nav.hambmenu__nav
+          ul.hambmenu__list
+            li.hambmenu__list-item
+              a.hambmenu__link(href="works.html") Мои работы
+            li.hambmenu__list-item
+              a.hambmenu__link(href="blog.html") Блог
+            li.hambmenu__list-item
+              a.hambmenu__link(href="about.html") Обо мне
+            li.hambmenu__list-item
+              a.hambmenu__link(href="autorization.html") Авторизация
+
     .header-bg
       .container.container--blog-intro
         .header
