Video in mobile deviceses fixed, add blog menu (swipe and fixed), add 3D card animation

--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -457,8 +457,8 @@ svg {
   overflow: scroll;
   transition-property: all;
   transition-duration: 0.6s;
-  display: none;
   opacity: 0;
+  transform: translateX(100%);
   @include tablets {
     padding-top: 180px;
   }
@@ -466,8 +466,6 @@ svg {
     padding-top: 145px;
   }
 }
-
-.hambmenu__nav {}
 
 .hambmenu__list {
   display: flex;
