--- a/src/assets/styles/sections/intro.scss
+++ b/src/assets/styles/sections/intro.scss
@@ -19,12 +19,12 @@
 
 .wrapper__html-video {
   position: absolute;
-	top: 0;
-	left: 0;
-  min-width: 100%; 
+  top: 0;
+  left: 0;
+  min-width: 100%;
   min-height: 100%;
-  width: auto; 
-  height: auto; 
+  width: auto;
+  height: auto;
   z-index: -5;
 }
 
@@ -38,7 +38,6 @@
   align-items: center;
   padding-top: 25px;
   padding-bottom: 40px;
-
   @include tablets {
     padding-top: 20px;
   }
@@ -50,7 +49,6 @@
 
 .intro__header {
   align-self: flex-end;
-
   @include phones {
     align-self: center;
   }
@@ -81,8 +79,10 @@
 .about {
   width: 380px;
   height: 395px;
-  background-color: rgba(28, 31, 41, 0.5);
   position: relative;
+  transition-duration: 2s;
+  transition-property: all;
+  perspective: 1000px;
 
   @include tablets {
     width: 350px;
@@ -95,11 +95,31 @@
   }
 }
 
+.about__front {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(28, 31, 41, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition-duration: 2s;
+  transition-property: all;
+  backface-visibility: hidden;
+
+  &--rotate {
+    transform: rotateY(180deg);
+  }
+}
+
 .about__content {
   text-align: center;
   padding: 40px;
   padding-bottom: 0;
-  margin-bottom: 20px
+  margin-bottom: 20px;
+  &--back {
+    padding: 30px 20px;
+    padding-bottom: 0;
+  }
 }
 
 .about__avatar {
@@ -157,11 +177,9 @@
   font-size: 16px;
   position: relative;
   flex-grow: 1;
-
   &:hover {
     background-color: #093c97;
   }
-
   &::before {
     content: "";
     display: block;
@@ -178,6 +196,256 @@
   }
   @include phones {
     font-size: 14px;
+  }
+}
+
+.about__back {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(28, 31, 41, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition-duration: 2s;
+  transition-property: all;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+
+  &--rotate {
+    transform: rotateY(0deg);
+  }
+}
+
+.about__login-title {
+  font-size: 35px;
+  color: #ffffff;
+  font-family: 'Sansus Webissimo', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.about__login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__input-container {
+  width: 100%;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.about__label-input {
+  display: inline-block;
+  position: relative;
+  height: 45px;
+  width: 45px;
+  
+  & svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    fill: #c4cbcd;
+  }
+  &--email svg {
+    width: 20px;
+    height: 22.6px;
+  }
+  &--pass svg {
+    width: 24px;
+    height: 22.6px;
+  }
+  &::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 45px;
+    background-color: #f0efe9;
+  }
+}
+
+.about__input {
+  padding: 12.9px 20px 12.9px 20px;
+  color: #aeb0b1;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  position: relative;
+  flex-grow: 1;
+  border: none;
+}
+
+.about__checkbox-container {
+  margin-bottom: 20px;
+}
+
+.about__checkbox {
+  display: none;
+  &:checked+.about__label-checkbox::before {
+    background-color: #0548be;
+    background-image: url("./assets/images/check.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 11px 11px;
+  }
+}
+
+.about__label-checkbox {
+  color: #ffffff;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  padding-left: 30px;
+  position: relative;
+  &::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 3px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #ffffff;
+    transition-property: all;
+    transition-duration: 0.5s;
+    background-position: center center;
+  }
+}
+
+.about__radio-question {
+  font-size: 16px;
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.about__radio {
+  display: none;
+  &:checked+.about__label-radio::after {
+    opacity: 1;
+  }
+}
+
+.about__label-radio {
+  color: #ffffff;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  padding-left: 30px;
+  position: relative;
+  margin-right: 40px;
+  &:last-child {
+    margin-right: 0;
+  }
+  &::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #ffffff;
+    transition-property: all;
+    transition-duration: 0.5s;
+  }
+  &::after {
+    opacity: 0;
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    position: absolute;
+    left: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #0548be;
+    transition-property: all;
+    transition-duration: 0.5s;
+  }
+}
+
+.about__link-on-intro {
+  border: none;
+  bottom: 0;
+  left: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  height: 45px;
+  position: absolute;
+  text-align: center;
+  vertical-align: middle;
+  width: 50%;
+  background-color: #004cd1;
+  color: #ffffff;
+  transition-property: all;
+  transition-duration: 0.5s;
+  &:hover {
+    background-color: #093c97;
+  }
+  &::before {
+    background-color: #7296d3;
+    content: "";
+    display: block;
+    height: 100%;
+    position: absolute;
+    right: -1px;
+    top: 0;
+    width: 2px;
+    z-index: 10;
+  }
+}
+
+.about__submit-button {
+  border: none;
+  bottom: 0;
+  right: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  height: 45px;
+  position: absolute;
+  text-align: center;
+  vertical-align: middle;
+  width: 50%;
+  background-color: #004cd1;
+  transition-property: all;
+  transition-duration: 0.5s;
+  color: #ffffff;
+  &:hover {
+    background-color: #093c97;
   }
 }
 
