--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -1,7 +1,7 @@
 extends ../auth.layout.pug
 
 block variables
-  - var title = 'Блог'
+  - var title = 'Обо мне'
 
 block scripts
   script(src='about.bundle.js')
