--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -9,36 +9,64 @@ block scripts
 block content
   .wrapper.wrapper--bg-intro
     .wrapper__video-bg
-      video.wrapper__html-video(id="bg-video", width="100%", height="auto", preload="auto" loop="loop", muted="muted", autoplay="autoplay", src="./assets/images/night.mp4")
+      video.wrapper__html-video(id="bg-video", width="100%", height="auto", preload="auto", loop, muted, autoplay, webkit-playsinline, playsinline)
         source(src="./assets/images/night.mp4", type="video/mp4")
+        source(src="./assets/images/night.ogv", type="video/ogg")
         source(src="./assets/images/night.webm", type="video/webm")
     .container
       .intro
         header.intro__header
           button.intro__btn-autorization Авторизоваться
         
-        article.about
-          .about__content
-            img.about__avatar(src="./assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
-            h1.about__title Юмадилов Тимур
-            h2.about__subtitle Личный сайт веб-разработчика
-          
-          .socials
-            a.socials__social-btn.socials__social-btn--vk(href="https://vk.com/timur.yumadilov")
-              svg
-                use(xlink:href='./assets/images/icons/sprite.svg#vk')
-            a.socials__social-btn.socials__social-btn--github(href="https://github.com/yumadilovtimur")
-              svg
-                use(xlink:href='./assets/images/icons/sprite.svg#github')
-            a.socials__social-btn.socials__social-btn--in(href="https://ru.linkedin.com/")
-              svg
-                use(xlink:href='./assets/images/icons/sprite.svg#in')
+        .about
+          article.about__front
+            .about__content
+              img.about__avatar(src="./assets/images/avatar.png", alt="Фотография Юмадилова Тимура")
+              h1.about__title Юмадилов Тимур
+              h2.about__subtitle Личный сайт веб-разработчика
+            
+            .socials
+              a.socials__social-btn.socials__social-btn--vk(href="https://vk.com/timur.yumadilov")
+                svg
+                  use(xlink:href='./assets/images/icons/sprite.svg#vk')
+              a.socials__social-btn.socials__social-btn--github(href="https://github.com/yumadilovtimur")
+                svg
+                  use(xlink:href='./assets/images/icons/sprite.svg#github')
+              a.socials__social-btn.socials__social-btn--in(href="https://ru.linkedin.com/")
+                svg
+                  use(xlink:href='./assets/images/icons/sprite.svg#in')
 
-          .about__buttons
-            nav.about__nav-buttons
-                a.about__link(href="works.html") Мои работы
-                a.about__link(href="about.html") Обо мне
-                a.about__link(href="blog.html") Блог
+            .about__buttons
+              nav.about__nav-buttons
+                  a.about__link(href="works.html") Мои работы
+                  a.about__link(href="about.html") Обо мне
+                  a.about__link(href="blog.html") Блог
+
+          article.about__back
+            .about__content.about__content--back
+              .about__login-title Авторизуйтесь
+              form.about__login-form(action="https://example.com", method="POST")
+                .about__input-container
+                  label.about__label-input.about__label-input--email(for="email")
+                    svg
+                      use(xlink:href='./assets/images/icons/sprite.svg#user')
+                  input.about__input(type="email", id="email", name="email", required, placeholder="Логин")
+                .about__input-container
+                  label.about__label-input.about__label-input--pass(for="password")
+                    svg
+                      use(xlink:href='./assets/images/icons/sprite.svg#key')
+                  input.about__input(type="password", id="password", name="password", required, placeholder="Пароль")
+                .about__checkbox-container
+                  input.about__checkbox(type="checkbox", id="man", name="man", value="i-am-man")
+                  label.about__label-checkbox(for="man") Я человек
+                .about__radio-question Вы точно не робот?
+                .about__radio-container
+                  input.about__radio(type="radio", id="yes", name="robot-or-man", value="yes")
+                  label.about__label-radio(for="yes") Да
+                  input.about__radio(type="radio", id="no", name="robot-or-man", value="no")
+                  label.about__label-radio(for="no") Не уверен
+                button.about__link-on-intro(type="button") На главную
+                button.about__submit-button(type="submit") Войти
 
         footer.intro__footer
           p.intro__footer-content © Юмадилов Тимур | создано с любовью в LoftSchool | 2018
