--- a/src/views/pages/works.pug
+++ b/src/views/pages/works.pug
@@ -1,7 +1,7 @@
 extends ../auth.layout.pug
 
 block variables
-  - var title = 'Блог'
+  - var title = 'Работы'
 
 block scripts
   script(src='works.bundle.js')
