parallax scroll and mousemove,bg video,3D card,slider,burger-menu,blog fixed menu and swipe

--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -107,6 +107,7 @@
   width: 100%;
   background-size: contain;
   background-image: url("./assets/images/blog-header-bg.png");
+
   @include tablets {
     margin-bottom: 70px;
   }
@@ -133,6 +134,8 @@
   width: 141px;
   height: 141px;
   margin-bottom: 5px;
+  transition-property: all;
+  transition-duration: 0.1s;
   @include phones {
     margin-bottom: 15px;
   }
@@ -146,6 +149,8 @@
   text-transform: uppercase;
   line-height: 1.5;
   font-size: 63px;
+  transition-property: all;
+  transition-duration: 0.1s;
   @include phones {
     font-size: 35px;
   }
@@ -169,6 +174,8 @@
   color: #ffffff;
   line-height: 1.5;
   font-size: 16px;
+  transition-property: all;
+  transition-duration: 0.1s;
   @include phones {
     font-size: 14px;
   }
