--- a/src/views/pages/works.pug
+++ b/src/views/pages/works.pug
@@ -61,14 +61,48 @@ block content
     .works-bg
       .container
         section.works
-          .works__image-container
-          .works__desc
-            .works__desc-container
-              span.works__work-name Сайт школы онлайн образования
-              span.works__technologies HTML, CSS, JavaScript
-              a.works__btn-open-work(href="https://github.com") Посмотреть сайт 
-                svg
-                  use(xlink:href='./assets/images/icons/sprite.svg#link')
+          .works__slider-container
+            .works__slider-scroller
+              .works__slider-item-container
+                .works__slider-item
+                  .works__image-container.works__image-container--1
+                  .works__desc
+                    .works__desc-container
+                      span.works__work-name Сайт школы онлайн образования
+                      span.works__technologies HTML, CSS, JavaScript
+                      a.works__btn-open-work(href="https://github.com") Посмотреть сайт 
+                        svg
+                          use(xlink:href='./assets/images/icons/sprite.svg#link')
+              .works__slider-item-container
+                .works__slider-item
+                  .works__image-container.works__image-container--2
+                  .works__desc
+                    .works__desc-container
+                      span.works__work-name Сайт веб-студии
+                      span.works__technologies HTML, CSS, JavaScript
+                      a.works__btn-open-work(href="https://github.com") Посмотреть сайт 
+                        svg
+                          use(xlink:href='./assets/images/icons/sprite.svg#link')
+              .works__slider-item-container
+                .works__slider-item
+                  .works__image-container.works__image-container--3
+                  .works__desc
+                    .works__desc-container
+                      span.works__work-name Сайт обучающего портала
+                      span.works__technologies HTML, CSS, JavaScript
+                      a.works__btn-open-work(href="https://github.com") Посмотреть сайт 
+                        svg
+                          use(xlink:href='./assets/images/icons/sprite.svg#link')
+              .works__slider-item-container
+                .works__slider-item
+                  .works__image-container.works__image-container--4
+                  .works__desc
+                    .works__desc-container
+                      span.works__work-name Сайт фитнес клуба
+                      span.works__technologies HTML, CSS, JavaScript
+                      a.works__btn-open-work(href="https://github.com") Посмотреть сайт 
+                        svg
+                          use(xlink:href='./assets/images/icons/sprite.svg#link')
           button.works__btn-left
             svg
               use(xlink:href='./assets/images/icons/sprite.svg#portf_arrow_down')
@@ -77,7 +111,7 @@ block content
               use(xlink:href='./assets/images/icons/sprite.svg#portf_arrow_down')
           ul.works__pagination-list
             li.works__pagination-item
-              button.works__btn-pagintaion
+              button.works__btn-pagintaion.works__btn-pagintaion--active
                 .works__btn-pagintaion-circle
             li.works__pagination-item
               button.works__btn-pagintaion
