--- a/src/assets/styles/sections/intro.scss
+++ b/src/assets/styles/sections/intro.scss
@@ -1,11 +1,43 @@
-.wrapper--bg-intro {
-  background-position: bottom center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-image: url("./assets/images/intro-bg.png");
-  position: relative;
+.wrapper--intro {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.bg-intro {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+}
+
+.bg-intro__container {
+  position: absolute;
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  height: auto;
+  bottom: 0;
+}
+
+.bg-intro__img {
+  width: 120%;
+  min-width: 120%;
+  max-width: 120%;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+  @include tablets {
+    width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  left: 0;
+  transform: translateX(0);
+  }
 }
 
 .wrapper__video-bg {
