--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -144,7 +144,7 @@ block content
           li.about-contacts__item
             svg.about-contacts__icon
               use(xlink:href='./assets/images/icons/sprite.svg#envelope_n')
-            span.about-contacts__item-text timur.yumadilov
+            span.about-contacts__item-text timurice@mail.ru
           li.about-contacts__item
             svg.about-contacts__icon
               use(xlink:href='./assets/images/icons/sprite.svg#envelope_n')
