--- a/src/assets/styles/sections/works.scss
+++ b/src/assets/styles/sections/works.scss
@@ -275,6 +275,13 @@
   text-decoration: none;
   position: relative;
   align-self: flex-start;
+  transition-property: all;
+  transition-duration: 0.5s;
+
+  &:hover {
+    background-color: #1663e9;
+    border-radius: 10px;
+  }
   @include tablets {
     align-self: center;
   }
